[tool.poetry]
name = "musedash-ripper"
version = "1.1.0"
description = "Tool for ripping the Muse Dash soundtrack."
readme = "README.md"
authors = ["Hayden Lau"]
license = "MIT"
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Sound/Audio"
]
repository = "https://github.com/lauhayden/musedash-ripper"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
json5 = "^0.9.10"
mutagen = "^1.46.0"
Pillow = "^9.2.0"
UnityPy = "^1.9.16"
# depend on patched python-fsb5
fsb5 = { git = "https://github.com/lauhayden/python-fsb5.git" }

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pyinstaller = "^5.5"
pylint = "^2.15.4"

[tool.poetry.scripts]
musedash-ripper = "musedash_ripper.gui:run"

[tool.black]
line-length = 100


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
