[tool.poetry]
name = "musedash-ripper"
version = "1.3.1"
description = "Tool for ripping the Muse Dash soundtrack."
readme = "README.md"
authors = ["Hayden Lau"]
license = "MIT"
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Sound/Audio"
]
repository = "https://github.com/lauhayden/musedash-ripper"

[tool.poetry.dependencies]
python = ">=3.11,<3.13" # <3.13 required by pyinstaller
mutagen = "^1.47.0"
Pillow = "^10.2.0"
UnityPy = "^1.10.7"
# depend on patched python-fsb5
fsb5 = { git = "https://github.com/lauhayden/python-fsb5.git" }
pyjson5 = "^1.6.5"

[tool.poetry.dev-dependencies]
black = "^24.1.1"
pyinstaller = "^6.3.0"
pylint = "^3.0.3"
mypy = "^1.8.0"
types-Pillow = "^10.2.0"

[tool.poetry.scripts]
musedash-ripper = "musedash_ripper.gui:run"

[tool.black]
line-length = 100

[tool.pylint.main]
disable=["fixme", "too-many-instance-attributes", "too-many-locals", "too-many-arguments"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
