[tool.poetry]
name = "musedash-ripper"
version = "1.3.2"
description = "Tool for ripping the Muse Dash soundtrack."
readme = "README.md"
authors = ["Hayden Lau"]
license = "MIT"
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Sound/Audio"
]
repository = "https://github.com/lauhayden/musedash-ripper"

[tool.poetry.dependencies]
python = ">=3.11,<3.14" # UnityPy does not have wheels for py 3.14
mutagen = "^1.47.0"
Pillow = "^12.0.0"
UnityPy = "^1.23.0"
# depend on patched python-fsb5
fsb5 = { git = "https://github.com/lauhayden/python-fsb5.git" }
pyjson5 = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
pyinstaller = "^6.16.0"
pylint = "^4.0.2"
mypy = "^1.18.2"
types-Pillow = "^10.2.0"

[tool.poetry.scripts]
musedash-ripper = "musedash_ripper.gui:run"

[tool.black]
line-length = 100

[tool.pylint.main]
disable=["fixme", "too-many-instance-attributes", "too-many-locals", "too-many-arguments"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
